# worldbench

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/tests/: page.tsx
benchmark/: __init__.py  cli.py  results.py  samples.py
benchmark/knowledge/: README.md  __init__.py  alpine.yaml  beach.yaml  cave.yaml  desert.yaml  forest.yaml  graph.py  grassland.yaml  lake.yaml  mountain.yaml  ocean.yaml  plain.yaml  river.yaml  sea.yaml  volcanic.yaml  volcano.yaml  wetland.yaml
components/: AboutTooltipLink.tsx  ExploreEvaluationsButton.tsx  GitHubLink.tsx  Header.tsx  HomeIsland.tsx  LiquidCard.tsx  MobileNav.tsx  MobileNotice.tsx  RecentTests.tsx  RevealFade.tsx  RevealText.tsx  ScrollToTopButton.tsx  TestCard.tsx  ThemeToggle.tsx
docs/: architecture.md  contributing.md  developer_guide.md  schema.md  task_authoring_guide.md  validators.md
lib/: about.ts  heroReveal.ts  providers.ts  tests.ts
manual_generation/: README.md
outputs/: create.html
prompts/: 01_json_generation_prompt_template.md  02_html_generation_prompt_template.md  README.md  generate_world_html.md  overview.md  prompt.md
public/: llms.txt  prompt.md
reports/: WC001_report.html  WC001_report.md  leaderboard.html  leaderboard.md
tests/: test_cli.py  test_knowledge.py  test_metrics.py  test_prompts_integrity.py  test_runner.py  test_validators.py
viewer/: README.md  package.json
(+259 files in other folders)
