[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldbench"
version = "1.0.0"
description = "A benchmark for evaluating LLMs on the generation of structured, living natural worlds."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "WorldBench Contributors" }]
keywords = ["benchmark", "llm", "world-generation", "ecology", "simulation"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7,<3",
    "fastapi>=0.111,<1",
    "typer>=0.12,<1",
    "networkx>=3.3,<4",
    "numpy>=1.26,<3",
    "shapely>=2.0,<3",
    "httpx>=0.27,<1",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    "rich>=13.7,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
worldbench = "benchmark.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmark", "benchmark.*"]
namespaces = false

[tool.setuptools.package-data]
benchmark = ["schemas/*.json", "knowledge/*.yaml", "metrics/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
